k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-card
  namespace: sorivma
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-card
  template:
    metadata:
      labels:
        app: student-card
    spec:
      containers:
        - name: student-card
          image: sorivma/student-card:latest
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 5
            failureThreshold: 30
