k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: student-card
  namespace: sorivma
spec:
  selector:
    app: student-card
  ports:
    - name: http
      port: 80
      targetPort: 8080
